# code2career

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.autodoc/: config.yaml
.github/workflows/: ci.yml  pr-readme-check.yml  publish.yml  update-readme.yml
analysis/: ast_parser.py
autodoc/: __init__.py  cli.py
autodoc/analysis/: __init__.py  ast_parser.py  dependency_graph.py  repo_scanner.py  semantic_changes.py
autodoc/artifacts/: readme_generator.py
autodoc/commands/: generate.py  init.py  scan.py  watch.py
autodoc/core/: __init__.py  config.py  exceptions.py  filenode.py  protocols.py  repository.py  scan.py  state.py
autodoc/generation/: readme_generator.py  resume_generator.py
autodoc/graph/: code_graph.py
docs/: API.md  EXAMPLES.md  README.md
