[project]
name = "autodoc"
version = "0.1.0"
description = "A tool for automatic README and resume generation for GitHub repositories."
dependencies = [
    "typer>=0.21.1",
    "pyyaml>=6.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
autodoc = "autodoc.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]