[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodoc"
version = "0.1.0"
description = "A tool for automatic README and resume generation for GitHub repositories."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AutoDoc Contributors"}
]
maintainers = [
    {name = "AutoDoc Contributors"}
]
keywords = ["documentation", "readme", "automation", "git", "code-analysis", "ast", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "typer>=0.21.1",
    "pyyaml>=6.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
autodoc = "autodoc.cli:app"

[project.urls]
Homepage = "https://github.com/niharo/autodoc"
Documentation = "https://github.com/niharo/autodoc#readme"
Repository = "https://github.com/niharo/autodoc"
Issues = "https://github.com/niharo/autodoc/issues"
Changelog = "https://github.com/niharo/autodoc/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodoc*"]
exclude = ["tests*", "*.tests*", "*.tests"]

[tool.setuptools.package-data]
autodoc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true